# astro_bot

./: .gitignore  README.md  events_dict.json  pyproject.toml  user_agents.txt
astro_bot/: _name = file.name  astro_bot.py  bot.py  config.py  db.py  db_queries.py  digest.txt  events_dict.json  queries.py  raw_data.txt  tel_bot.py  templates.py  tests.py
astro_bot/handlers/: autosend_events.py  certain_day.py  events.py  get_specific_date_event.py  greeting.py  help_.py  image.py  new.py  specific_date.py  start.py  today.py  tomorrow.py  week.py  yesterday.py
astro_bot/keyboards/: inline_keyboard.py  reply_keyboard.py
astro_bot/services/: events.py  extractor.py  image.py  main.py  parse_data.py  req.py  scrap_data.py  scraper.py  spider.py  users.py
astro_bot_v.0.2/: config.py  db.py  parse_data.py  scrap_data.py  tests.py  users.db
astro_bot_v.0.2/services/: extractor.py  main.py  scrap_data.py
astro_bot_v2/: __main__.py  astrobase.sqbpro  config.py  db.py  templates.py  tests.py
astro_bot_v2/handlers/: autosend_events.py  get_specific_date_event.py  greeting.py  help_.py  specific_date.py  start.py  today.py  tomorrow.py  week.py  yesterday.py
astro_bot_v2/services/: events.py  extractor.py  parse_data.py  scrap_data.py  users.py
